--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -456,7 +456,7 @@
 		}
 	},
 	"searchResults": {
-		"message": "Rechercher résultat"
+		"message": "Résultats de recherche"
 	},
 	"collectionCantBeDeleted": {
 		"message": "Suppression de $collectionName$ impossible",
